# medical-rag-vlm-ii

./: .gitignore  README.md  pyproject.toml  requirements-cpu.txt  requirements-gpu.txt  setup_runpod.sh
configs/: datasets.yaml  models.yaml
scripts/: download_data.py  smoke_test_cpu.py
src/medvlm/: __init__.py
src/medvlm/data/: __init__.py  loaders.py
src/medvlm/eval/: prompts.py  report.py  run_eval.py
src/medvlm/metrics/: __init__.py  hallucination.py  report_metrics.py  vqa_metrics.py
src/medvlm/models/: __init__.py  base.py  chexagent.py  dummy.py  llava_med.py  registry.py  smolvlm.py
src/medvlm/utils/: __init__.py  io.py  logging_utils.py  seed.py
